--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>You’re working on a feature for a website or web app that requires some overriding or other changes to the style of a component. You jump into Web Inspector, grab the class for the element(s) in question, and write some new CSS. Easy. However, after refreshing the page, none of the changes have been made — or some have, but not all of them. Maybe the color changes, but the `margin-left: auto` you gave the element remains the same.</p>
 
-    <p>This is usually because of specificity. CSS specificity refers to the specificity of the conditions of a CSS selector. Here’s an example:</p>
+    <p>This is usually because of <strong>specificity</strong>. CSS specificity refers to the specificity of the conditions of a CSS selector. Here’s an example:</p>
     
     <img src="images/code-01.png"/>
 
